--- a/get-things-done/src/app/components/task/task.component.html
+++ b/get-things-done/src/app/components/task/task.component.html
@@ -1,4 +1,4 @@
 <div>
-  <input formControlName="completedControl" type="checkbox" id="task-done"/>
+  <input [formControl]="completedControl" type="checkbox" (click)="onTaskCheckClick()" id="task-done"/>
   <label for="task-done">{{ task.title }}</label>
 </div>
