fix(task-list): fix initial ng for placeholder

--- a/get-things-done/src/app/components/task-list/task-list.component.html
+++ b/get-things-done/src/app/components/task-list/task-list.component.html
@@ -1,5 +1,3 @@
 <div *ngIf="taskList | async as tl">
-  <div *ngFor="task in tl">
-    <app-task [task]="task"></app-task>
-  </div>
+    <app-task *ngFor="let task of tl; index as i; trackBy: trackByTaskId" [task]="task"></app-task>
 </div>
