--- a/get-things-done/src/app/components/task/task.component.html
+++ b/get-things-done/src/app/components/task/task.component.html
@@ -1,4 +1,5 @@
 <div>
-  <input [formControl]="completedControl" type="checkbox" (click)="onTaskCheckClick()" id="task-done"/>
+  <input [formControl]="completedControl" type="checkbox" [checked]="task.completed" (change)="onTaskCheckClick()" id="task-done"/>
   <label for="task-done">{{ task.title }}</label>
+  <button (click)="onDeleteTaskClick()">Delete Task</button>
 </div>
