--- a/get-things-done/src/app/app.component.html
+++ b/get-things-done/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-add-task></app-add-task>
+<app-filter-tasks></app-filter-tasks>
 <app-task-list></app-task-list>
 
 <router-outlet></router-outlet>
