feat(styles): a bit of styling for better visualization of components

--- a/get-things-done/src/app/app.component.html
+++ b/get-things-done/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-add-task></app-add-task>
-<app-filter-tasks></app-filter-tasks>
-<app-task-list></app-task-list>
+<div class="main-container">
+  <div class="top-container">
+    <app-add-task></app-add-task>
+    <app-filter-tasks></app-filter-tasks>
+  </div>
+  <app-task-list></app-task-list>
+</div>
 
 <router-outlet></router-outlet>
