--- a/get-things-done/src/styles.scss
+++ b/get-things-done/src/styles.scss
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+  background-color: #74bb6f;
+}
+
+body {
+  margin: 100px;
+  padding: 0px 100px;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
