--- a/get-things-done/src/app/components/filter-tasks/filter-tasks.component.html
+++ b/get-things-done/src/app/components/filter-tasks/filter-tasks.component.html
@@ -1,6 +1,8 @@
-<label for="task-status">Filter by status</label>
-<select [formControl]="selectedFilter" id="task-status" type="dropdown">
-  <option value="all">All</option>
-  <option value="completed">Completed</option>
-  <option value="incomplete">Incomplete</option>
-</select>
+<div class="filter-container">
+  <label for="task-status">Filter by status</label>
+  <select [formControl]="selectedFilter" id="task-status" type="dropdown">
+    <option value="all">All</option>
+    <option value="completed">Completed</option>
+    <option value="incomplete">Incomplete</option>
+  </select>
+</div>
